--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
   },
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "@t3-oss/env-core": "^0.6.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "strava-v3": "^2.2.0",
+    "tsconfig-paths": "^4.2.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
